--- a/esittelysivu.html
+++ b/esittelysivu.html
@@ -1,6 +1,19 @@
+<DOCTYPE html>
 <html>
-L&auml;ssyti.
+<head>
+<title>Tietokantasovellus</title>
+<meta charset="utf-8" />
+<style>
+  h1 { font-size: 1.4em; }
+  h2 { font-size: 1.1em; }
+</head>
+<body>
+<h1>Tietokantasovelluksen esittelysivu</h1>
+<p>Yleisiä linkkejä</p>
+<ul>
+<li><a href="https://github.com/sandral/tsoha.git">Työn repositorio</a></li>
+<li><a href=" 
+</ul>
 
-
-Muokattu userssissa.
+</body>
 </html>
