--- a/esittelysivu.html
+++ b/esittelysivu.html
@@ -12,8 +12,10 @@
 <p>Yleisiä linkkejä</p>
 <ul>
 <li><a href="https://github.com/sandral/tsoha.git">Työn repositorio</a></li>
-<li><a href=" 
+<li><a href="https://github.com/sandral/tsoha/tree/master/doc">Työn dokumentaatio</a></li> 
 </ul>
+<h2>Työn aihe</h2>
+
 
 </body>
 </html>
