--- a/esittelysivu.html
+++ b/esittelysivu.html
@@ -6,6 +6,7 @@
 <style>
   h1 { font-size: 1.4em; }
   h2 { font-size: 1.1em; }
+</style>
 </head>
 <body>
 <h1>Tietokantasovelluksen esittelysivu</h1>
