--- a/esittelysivu.html
+++ b/esittelysivu.html
@@ -16,7 +16,7 @@
 <li><a href="https://github.com/sandral/tsoha/tree/master/doc">Työn dokumentaatio</a></li> 
 </ul>
 <h2>Työn aihe</h2>
-Lankatietokanta
+Työn aiheena on lankatietokanta. 
 
 </body>
 </html>
