--- a/esittelysivu.html
+++ b/esittelysivu.html
@@ -16,7 +16,6 @@
 <li><a href="https://github.com/sandral/tsoha/tree/master/doc">Työn dokumentaatio</a></li> 
 </ul>
 <h2>Työn aihe</h2>
-Työn aiheena on lankatietokanta. 
-
+Työn aiheena on lankatietokanta. Lankatietokannan avulla käsityöharrastaja voi pitää kirjaa omistamistaan lankalaaduista ja -määristä. Lankatietokannasta voi hakea lankoja esimerkiksi puikkosuosituksen tai materiaalin perusteella. 
 </body>
 </html>
