--- a/esittelysivu.html
+++ b/esittelysivu.html
@@ -16,6 +16,6 @@
 <li><a href="https://github.com/sandral/tsoha/tree/master/doc">Työn dokumentaatio</a></li> 
 </ul>
 <h2>Työn aihe</h2>
-Työn aiheena on lankatietokanta. Lankatietokannan avulla käsityöharrastaja voi pitää kirjaa omistamistaan lankalaaduista ja -määristä. Lankatietokannasta voi hakea lankoja esimerkiksi puikkosuosituksen tai materiaalin perusteella. 
+Työn aiheena on lankatietokanta. Lankatietokannan avulla käsityöharrastaja voi pitää kirjaa omistamistaan lankalaaduista ja -määristä. Lankatietokannasta voi hakea lankoja esimerkiksi puikkosuosituksen tai materiaalin perusteella, ja selvittää omistaako riittävästi lankaa jotakin tiettyä käsityötä varten. Lankoja voi hakea myös käyttötarkoituksen tai muun ominaisuuden mukaan, esimerkiksi vaikka kaikki sukka- tai merinovillalangat. 
 </body>
 </html>
