--- a/html-demo/aloitussivu.html
+++ b/html-demo/aloitussivu.html
@@ -3,6 +3,9 @@
 <head>
 <title>Langat</title>
 <meta charset="utf-8" />
+<link href="../css/bootstrap.css" rel="stylesheet">
+<link href="../css/bootstrap-theme.css" rel="stylesheet">
+<link href="../css/main.css" rel="stylesheet">
 </head>
 <body>
 <h1>Lankatietokanta</h1>
