--- a/html-demo/lomake.html
+++ b/html-demo/lomake.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html>
 <head>
+<link href="../css/bootstrap.css" rel="stylesheet">
+<link href="../css/bootstrap-theme.css" rel="stylesheet">
+<link href="../css/main.css" rel="stylesheet">
 <title>rekisteroityminen</title>
 <meta charset="utf-8">
 </head>
