--- a/html-demo/hakusivu.html
+++ b/html-demo/hakusivu.html
@@ -11,12 +11,13 @@
 <h1>Hae lankoja</h1>
 <a href="etusivu.html">Etusivulle</a>
 <a href="muokkaussivu.html">Lisää lankoja</a>
+<a href="hakusivu.html">Hae lankoja</a>
 <a href="omattiedot.html">Omat tiedot</a> 
 <a href="aloitussivu.html">Kirjaudu ulos</a>                                  
 <br><br>
 Valitse yksi tai useampi hakuehto:
 <br><br>
-<form name="haku" action="tahan_sivu.php" method="post">
+<form name="haku" action="tulossivu.html" method="post">
 Lanka:
 <select name="Lanka">
 <option value="7veljesta">7 veljestä</option>
@@ -92,6 +93,8 @@ Muut:<br>
 <input type="checkbox" name="kasvivarjatty" value="kasvivarjatty"> Kasvivarjatty<br>
 <input type="checkbox" name="hahtuvaa" value="hahtuvaa"> Hahtuvaa<br>
 <input type="checkbox" name="nauhalanka" value="nauhalanka"> Nauhalanka<br>
+<br>
+<input type="submit" value="Lähetä">
 </form>
 </body>
 </html>
