--- a/html-demo/omattiedot.html
+++ b/html-demo/omattiedot.html
@@ -13,6 +13,7 @@
 <a href="etusivu.html">Etusivulle</a>
 <a href="muokkaussivu.html">Lisää lankoja</a>
 <a href="hakusivu.html">Hae lankoja</a>
+<a href="omattiedot.html">Omat tiedot</a>
 <a href="aloitussivu.html">Kirjaudu ulos</a>
 <br>
 <br>
