--- a/html-demo/tietojenmuokkaus.html
+++ b/html-demo/tietojenmuokkaus.html
@@ -9,7 +9,13 @@
 </head>
 <body>
 <h1>Muokkaa tietojasi</h1>
-<form name="tiedot" action="tahan_sivu.php" method="post">
+<a href="etusivu.html">Etusivulle</a>
+<a href="muokkaussivu.html">Lisää lanka</a>
+<a href="hakusivu.html">Hae lankoja</a>
+<a href="omattiedot.html">Omat tiedot</a>
+<a href="aloitussivu.html">Kirjaudu ulos</a>
+
+<form name="tiedot" action="omattiedot.html" method="post">
 <table>
 <tr>
 <td>Etunimi: </td><td><input type="text" name="etunimi"></td>
@@ -28,7 +34,6 @@
 </tr>
 </table>
 <input type="submit" value="Lähetä">
-<input type="submit" value="Peruuta">
 </form>
 </body>
 </html>
