--- a/html-demo/etusivu.html
+++ b/html-demo/etusivu.html
@@ -17,6 +17,23 @@
 <br>
 <h4>Tervehdys, Nelli Neuloja!</h4>
 <br>
-Nellin langat aakkosjärjestyksessä.
+Nellin langat:
+<table>
+<tr>
+<td>Lanka</td><td>Valmistaja</td><td></td>
+</tr>
+<tr>
+<td></td><td></td><td></td>
+</tr>
+<tr>
+<td></td><td></td><td></td>
+</tr>
+<tr>
+<td></td><td></td><td></td>
+</tr>
+<tr>
+<td></td><td></td><td></td>
+</tr>
+</table>
 </body>
 </html>
