--- a/html-demo/muokkaussivu.html
+++ b/html-demo/muokkaussivu.html
@@ -18,7 +18,7 @@
 <br>
 Jos langan tiedot löytyvät jo tietokannasta, täytä ainoastaan määrä.<br>
 <br>
-<form name="lisays" action="tahan_sivu.php" method="post">
+<form name="lisays" action="etusivu.html" method="post">
 Lanka:
 <select name="Lanka">
 <option value="7veljesta">7 veljestä</option>
