--- a/html-demo/etusivu.html
+++ b/html-demo/etusivu.html
@@ -20,19 +20,19 @@
 Nellin langat:
 <table>
 <tr>
-<td>Lanka</td><td>Valmistaja</td><td></td>
+<td>Lanka</td><td> Valmistaja</td><td></td>
 </tr>
 <tr>
-<td></td><td></td><td></td>
+<td>Alpakka</td><td> TeeTee</td><td><a href="muokkaussivu.html">Päivitä</a></td>
 </tr>
 <tr>
-<td></td><td></td><td></td>
+<td>Alpaca Tweed</td><td> Linie</td><td><a href="muokkaussivu.html">Päivitä</a></td>
 </tr>
 <tr>
-<td></td><td></td><td></td>
+<td>Bamboo</td><td> käsinkehrätty</td><td><a href="muokkaussivu.html">Päivitä</a></td>
 </tr>
 <tr>
-<td></td><td></td><td></td>
+<td>Cora</td><td> Linie</td><td><a href="muokkaussivu.html">Päivitä</a></td>
 </tr>
 </table>
 </body>
