--- a/html-demo/lomake.html
+++ b/html-demo/lomake.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <h1>Rekisteröidy käyttäjäksi</h1>
-<form name="register" action="tahan_osoite.php" method="post">
+<form name="register" action="etusivu.html" method="post">
 <table>
 <tr>
 <td>Etunimi:</td><td><input type="text" name="firstname"></td>
