--- a/html-demo/tulossivu.html
+++ b/html-demo/tulossivu.html
@@ -17,19 +17,19 @@
 <br>
 <table>
 <tr>
-<td>Lanka</td><td>Valmistaja</td><td>Puikkosuositus</td><td>m/100g</td><td>Määrä</td><td>Attribuutit</td>
+<td>Lanka</td><td>Valmistaja</td><td>Puikkosuositus</td><td>m/100g</td><td>Määrä</td><td>Attribuutit</td><td></td>
 </tr>
 <tr>
-<td>Alpaca</td><td>Drops</td><td>3,0-3,5</td><td>440</td><td>50</td><td>Valkoinen, Huopuva, Alpakka</td>
+<td>Alpaca</td><td>Drops</td><td>3,0-3,5</td><td>440</td><td>50</td><td>Valkoinen, Huopuva, Alpakka</td><td><a href="muokkaussivu.html">Muokkaa</a></td>
 </tr>
 <tr>
-<td>Alpakka</td><td>TeeTee</td><td>3,0-4,0</td><td>250</td><td>130</td><td>Musta, Alpakka</td>
+<td>Alpakka</td><td>TeeTee</td><td>3,0-4,0</td><td>250</td><td>130</td><td>Musta, Alpakka</td><td><a href="muokkaussivu.html">Muokkaa</a></td>
 </tr>
 <tr>
-<td>Alpaca</td><td>Quito</td><td>5,0-6,0</td><td>120</td><td>200</td><td>Liila, Huopuva, Alpakka</td>
+<td>Alpaca</td><td>Quito</td><td>5,0-6,0</td><td>120</td><td>200</td><td>Liila, Huopuva, Alpakka</td><td><a href="muokkaussivu.html">Muokkaa</a></td>
 </tr>
 <tr>
-<td>Fine Lace</td><td>Rowan</td><td>2,0-4,0</td><td>437</td><td>150</td><td>Vihreä, Alpakka, Merinovilla</td>
+<td>Fine Lace</td><td>Rowan</td><td>2,0-4,0</td><td>437</td><td>150</td><td>Vihreä, Alpakka, Merinovilla</td><td><a href="muokkaussivu.html">Muokkaa</a></td>
 </tr>
 
 </table>
