--- a/esittelysivu.html
+++ b/esittelysivu.html
@@ -14,6 +14,7 @@
 <ul>
 <li><a href="https://github.com/sandral/tsoha.git">Työn repositorio</a></li>
 <li><a href="https://github.com/sandral/tsoha/tree/master/doc">Työn dokumentaatio</a></li> 
+<li><a href="http://aluhtani.users.cs.helsinki.fi/tsoha/connectiontest.php/">Connectiontest-ohjelma</a></li>
 <li><a href="http://aluhtani.users.cs.helsinki.fi/tsoha/html-demo/etusivu.html">HTML-demosivujen etusivu</a></li>
 </ul>
 <h2>Työn aihe</h2>
