--- a/esittelysivu.html
+++ b/esittelysivu.html
@@ -20,7 +20,8 @@
 <li><a href="http://aluhtani.users.cs.helsinki.fi/tsoha/login.php">Kirjautumissivu</a></li>
 </ul>
 <p>
-Tunnus ja salasana kirjautumista varten: Anneli, asdf
+Tunnus ja salasana kirjautumista varten: Anneli, asdf <br>
+Admin-käyttäjän tunnus ja salasana kirjautumista varten: Pentti, merinovillahousut
 </p>
 <h2>Työn aihe</h2>
 Työn aiheena on lankatietokanta. Lankatietokannan avulla käsityöharrastaja voi pitää kirjaa omistamistaan lankalaaduista ja -määristä. Lankatietokannasta voi hakea lankoja esimerkiksi puikkosuosituksen tai materiaalin perusteella, ja selvittää omistaako riittävästi lankaa jotakin tiettyä käsityötä varten. Lankoja voi hakea myös käyttötarkoituksen tai muun ominaisuuden mukaan, esimerkiksi vaikka kaikki sukka- tai merinovillalangat. 
